fix alignment in safari and general height of elements, fixes #5349
Closes #5349

Merge request studip/studip!4022

--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -335,7 +335,8 @@ form.default {
     .hgroup-btn {
         display: flex;
         flex-wrap: wrap;
-        align-items: baseline;
+        gap: 0.5ex;
+        align-items: center;
         max-width: $max-width-m;
 
         &.size-s {
