--- a/resources/assets/stylesheets/scss/selects.scss
+++ b/resources/assets/stylesheets/scss/selects.scss
@@ -1,8 +1,8 @@
 $select-border: 1px solid var(--light-gray-color-40);
 $select-border-focus: 1px solid var(--brand-color-dark);
 $select-border-radius: 0;
-$select-height-default: 30px;
-$select-arrow-size: 10;
+$select-height-default: 32px;
+$select-arrow-size: 10px;
 
 select {
     // Reset appearance
@@ -31,7 +31,6 @@ select {
         background-repeat: no-repeat;
 
         height: $select-height-default;
-        line-height: 1;
         overflow: hidden;
         text-overflow: ellipsis;
     }
